tests/negative/m34_incompatible_pointer.c
int main(void) {
    int *ip;
    char *cp;
    ip = cp;
    return 0;
}
